--- a/LearningPod/AndroidManifest.xml
+++ b/LearningPod/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/lpicon_small"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -28,7 +28,9 @@
         </activity>
         <activity android:name = "com.learningpod.android.activities.HomeScreenActivity"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
-            <activity android:name = "com.learningpod.android.activities.GooglePlusSignInActivity"
+        <activity android:name = "com.learningpod.android.activities.GooglePlusSignInActivity"
+            android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+        <activity android:name = "com.learningpod.android.activities.PodQuestionActivity"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
     	<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
