--- a/LearningPod/AndroidManifest.xml
+++ b/LearningPod/AndroidManifest.xml
@@ -26,11 +26,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name = "com.learningpod.android.activities.HomeScreenActivity"
+         <activity android:name = "com.learningpod.android.activities.HomeScreenActivity"
+            android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>        
+        <activity android:name = "com.learningpod.android.activities.HomeScreenActivityWithSlidingMenu"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
         <activity android:name = "com.learningpod.android.activities.GooglePlusSignInActivity"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
         <activity android:name = "com.learningpod.android.activities.PodQuestionActivity"
+            android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+         <activity android:name = "com.learningpod.android.activities.SummaryActivity"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
     	<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
