--- a/LearningPod/AndroidManifest.xml
+++ b/LearningPod/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
-            android:name="com.learningpod.android.activities.AccountSelectorActivity"
+            android:name="com.learningpod.android.activities.SplashActivity"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +35,10 @@
         <activity android:name = "com.learningpod.android.activities.PodQuestionActivity"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
          <activity android:name = "com.learningpod.android.activities.SummaryActivity"
+            android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+         <activity android:name = "com.learningpod.android.activities.MapActivity"
+            android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+          <activity android:name = "com.learningpod.android.activities.MapActivityBeforeLogin"
             android:label="@string/app_name" android:screenOrientation="landscape" android:configChanges="keyboardHidden|orientation|screenSize"></activity>
     	<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
